# IntegratedSort

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: README.md
include/: insertion_sort.hpp  integrated_sort.hpp  merge_sort.hpp
src/: README.md  insertion_sort.cpp  insertion_sort.hpp  integrated_sort.cpp  integrated_sort.hpp  main.cpp  merge_sort.cpp  merge_sort.hpp
test/: CMakeLists.txt  README.md  insertion_sort_test.cpp  integrated_sort_test.cpp  merge_sort_test.cpp  sorting_test.hpp
test/data/: key_comp_1.csv  key_comp_128.csv  key_comp_16.csv  key_comp_32.csv  key_comp_64.csv  key_comp_8.csv  optimal_S_1e4.csv  optimal_S_1e5.csv  optimal_S_1e6.csv  optimal_S_1e7.csv  val_S_1.csv  val_S_16.csv
test/data_backup/: optimal_S_1e4.csv  optimal_S_1e5.csv  optimal_S_1e6.csv
test/src/: helpers.hpp  main.cpp  sorting.hpp  visualize.ipynb
